# polymarket

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
docs/: DECISIONS.md  GLOSSARY.md  PROJECT_CONTEXT.md  README.md
docs/sprints/: README.md
docs/sprints/sprint-00-bootstrap/: prompt.md  result.md
docs/sprints/sprint-01-trader-discovery/: data-sources.md  findings.md  prompt.md  result.md
docs/sprints/sprint-02-sports-favorite-backtest/: findings-backtest.md  prompt.md  result.md
docs/sprints/sprint-02b-winner-trade-deep-dive/: findings-deep-dive.md  prompt.md  result.md
docs/sprints/sprint-03-copy-trade-tracker/: V3-go-live-runbook.md  findings-v2-backtest.md  prompt.md  result.md  trader-lifetime-analysis.md  winner-trade-lists.md
pm_research/: __init__.py  backtest.py  cli.py  copy_runner.py  copy_strategy.py  data_api.py  discover.py  enrich.py  executor.py  http.py  leaderboard.py  markets.py  metrics.py  onchain.py  prices.py  profile.py  proposals.py  risk.py  scan.py  tracker.py  user_pnl.py  validate.py
scripts/: cron-scan.sh  git-credential-env.sh
tests/: test_smoke.py
