[project]
name = "polymarket-hft"
version = "0.0.1"
description = "High-frequency trading bot for Polymarket prediction markets"
requires-python = ">=3.12"
dependencies = [
    "aiolimiter>=1.2.1",
    "httpx>=0.28.1",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]
